--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,7 @@
     text-align: center;
     width: 180px;
     margin:60px 0 0;
-    
+
 }
 
 .menu_item ul li {
@@ -29,7 +29,7 @@ li button {
     /*動き*/
 	transition: all 0.6s;
 }
- 
+
 
 .g-nav.panelactive{
     left: 0;
@@ -51,16 +51,23 @@ li button {
     margin-top:60px;
 }
 .task {
-    min-width: 450px;
+    min-width: 380px;
 }
 .card {
-    min-width:450px;
+    min-width:400px;
+}
+.card-text {
+    white-space:pre-wrap;
 }
 
 .task_delete {
-    top: 50px;
+    top: 60px;
     right: 10%;
 }
 .foot_space {
     height: 100px;
+}
+
+a {
+    text-decoration: none;
 }
